# opengl-game

./: .gitignore  CMakeLists.txt  LinuxMakefile  Makefile  README.md  compile_commands.json  main  material.h  runtest  runtests  test
.cache/clangd/index/: glad.c.C9C18237524FCA83.idx  glad.h.A9782C538E1E355A.idx  glfw3.h.E5E020E417DF32F0.idx  linmath.h.9924D20814CC3BDB.idx  main.c.2CDF5F5226C57321.idx  mat4.c.3097533848C95628.idx  mat4.h.F843725D69EC6C0F.idx  mesh.c.BC91DD29347D986C.idx  (+6 more)
assets/: car.mtl  sponza.mtl
libs/glad/: glad.c
shaders/: basic.frag  basic.vert  color_lit.frag  color_unlit.frag  lighting.glsl  skybox.frag  skybox.vert  texture_lit.frag  texture_unlit.frag  unlit.frag
src/: arraylist.c  arraylist.h  camera.c  camera.h  entity.c  entity.h  hashmap.c  hashmap.h  ivec3.h  light.c  light.h  lightbuffer.c  lightbuffer.h  linmath.h  main.c  mat4.c  mat4.h  material.c  material.h  mesh.c  mesh.h  objparser.c  rendering.c  rendering.h  resourcemanager.c  resourcemanager.h  scene.c  scene.h  scenemanager.c  scenemanager.h  shader.c  shader.h  ssbo.c  ssbo.h  texture.c  texture.h  vec2.h  vec3.c  vec3.h
src/core/: mesh.h  shader.c  shader.h  texture.h
src/engine/: debug_renderer.h  engine.c  engine.h  entity.c  entity.h  material.c  material.h  objparser.c  resourcemanager.h  scene.c  scene.h  scenemanager.c  scenemanager.h  skybox.c  skybox.h
src/lighting/: lightbuffer.h
src/math/: ivec2.h
src/rendering/: camera.c  renderer.c  renderer.h
src/util/: arraylist.h  hash.c  hash.h
tests/: run_tests.c  test_arraylist.c  testing.c  testing.h
tests/arraylist/: test_arraylist.c  test_arraylist.h
tests/hashmap/: test_hashmap.c  test_hashmap.h
tests/ringbuffer/: test_ringbuffer.c  test_ringbuffer.h
tests/shader_parsing/: test_shader_parsing.c  test_shader_parsing.h
(+25 files in other folders)
